[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "escan_macros/version.py"
version_scheme = "post-release"

[tool.setuptools.packages.find]
include = ["escan_macros"]

[tool.coverage.run]
omit = ["tests/*"]

[project]
name = "escan_macros"
dynamic = ["version"]
requires-python = ">= 3.9"
description = "macros for EpicsScan"

readme = "README.rst"
authors = [
     {name = "Matthew Newville", email = "matt.newville@gmail.com"}
]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["epics scanning"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    ]
dependencies = ["epicsscan"]
[project.urls]
Homepage = "https://github.com/pyepics/epicsscan"
Documentation ="https://github.com/pyepics/epicsscan"
Tracker = "https://github.com/newville/pyepics/issues"


[project.optional-dependencies]
dev = ["build", "twine"]
doc = ["Sphinx"]
all = ["escan_macros[doc,dev]"]
